Update meta tags for SEO and page title

--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
   <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- SEO Meta Tags -->
-  <meta name="description" content="喜达鸭 - 实时新闻聚合阅读器，汇集全球热点新闻，提供优雅的阅读体验" />
-  <meta name="keywords" content="喜达鸭，喜达鸭热搜榜，新闻,科技新闻,实时新闻,新闻聚合" />
-  <meta name="author" content="喜达鸭" />
+  <meta name="description" content="喜达鸭 | 新闻资讯热搜榜，实时新闻聚合，汇集全球热点新闻资讯，提供优质新闻资讯" />
+  <meta name="keywords" content="喜达鸭，喜达鸭热搜榜，喜达鸭新闻资讯热搜榜，新闻,科技新闻,实时新闻,新闻聚合" />
+  <meta name="author" content="喜达鸭 | 新闻资讯热搜榜" />
   <meta name="robots" content="index, follow" />
 
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="喜达鸭 - 优雅的新闻聚合阅读器" />
-  <meta property="og:description" content="实时新闻聚合阅读器，汇集全球热点新闻，提供优雅的阅读体验" />
+  <meta property="og:title" content="喜达鸭 | 新闻资讯热搜榜" />
+  <meta property="og:description" content="喜达鸭 | 新闻资讯热搜榜，实时新闻聚合，汇集全球热点新闻资讯，提供优质新闻资讯" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://newsnow.busiyi.world" />
   <meta property="og:image" content="https://newsnow.busiyi.world/og-image.png" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="喜达鸭 - 优雅的新闻聚合阅读器" />
-  <meta name="twitter:description" content="实时新闻聚合阅读器，汇集全球热点新闻，提供优雅的阅读体验" />
+  <meta name="twitter:title" content="喜达鸭 | 新闻资讯热搜榜" />
+  <meta name="twitter:description" content="喜达鸭 | 新闻资讯热搜榜，实时新闻聚合，汇集全球热点新闻资讯，提供优质新闻资讯" />
   <meta name="twitter:image" content="https://newsnow.busiyi.world/og-image.svg" />
 
   <meta name="theme-color" content="#F14D42" />
@@ -35,7 +35,7 @@
       "@type": "WebSite",
       "name": "NewsNow",
       "url": "https://newsnow.busiyi.world",
-      "description": "实时新闻聚合阅读器，汇集全球热点新闻，提供优雅的阅读体验",
+      "description": "喜达鸭 | 新闻资讯热搜榜，实时新闻聚合，汇集全球热点新闻资讯，提供优质新闻资讯",
     }
   </script>
 
@@ -56,7 +56,7 @@
       window.history.replaceState({}, document.title, window.location.pathname)
     }
   </script>
-  <title>喜达鸭</title>
+  <title>喜达鸭 | 新闻资讯热搜榜</title>
 </head>
 
 <body>
